# scikit-na

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.rst  regression.rst  report.rst  scikit_na.altair.rst  scikit_na.mpl.rst  scikit_na.rst  stats.rst  vis.ipynb  vis.rst
src/scikit_na/: __init__.py  _descr.py  _export.py  _model.py  _na.py  _plotting.py  _report.py  _stats.py
src/scikit_na/altair/: __init__.py  _altair.py
src/scikit_na/mpl/: __init__.py  _mpl.py
tests/: test_altair.py  test_export.py  test_mpl.py  test_report.py  test_scitit_na.py  test_stats.py  test_summary.py
