[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-na"
dynamic = ["version"]
description = "Missing Values Analysis for Data Science"
readme = "README.md"
requires-python = ">=3.8"
license.file = "LICENSE"
authors = [
  { name = "Maksim Terpilovskii", email = "maximtrp@gmail.com" },
]
keywords = [
    "data science",
    "data analytics"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: General",
]
urls.homepage = "https://github.com/maximtrp/scikit-na"
urls.documentation = "https://scikit-na.readthedocs.io/"

dependencies = [
    "numpy",
    "statsmodels",
    "seaborn",
    "pandas",
    "altair",
    "matplotlib",
    "ipywidgets",
]

[project.optional-dependencies]
test = ["pytest", "codecov", "coverage"]

[tool.setuptools.dynamic]
version = {attr = "scikit_na.__version__"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
