[metadata]
name = scikit-na
version = attr: scikit_na.__version__
author = maximtrp
author_email = maximtrp@gmail.com
description = Missing Values Analysis for Data Science
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/maximtrp/scikit-na
keywords = data science, data analytics 
classifiers = 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Information Analysis

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir = =src
install_requires =
    numpy
    statsmodels
    seaborn
    pandas
    altair
    matplotlib
    ipywidgets

[options.packages.find]
where = src
